# cpprestsdk

./: CMakeLists.txt
Release/: CMakeLists.txt
Release/cmake/: cpprest_find_zlib.cmake
